Some classes from OOP2_Lab02

--- a/OOP_Lab04/OOP_Lab04.csproj
+++ b/OOP_Lab04/OOP_Lab04.csproj
@@ -43,7 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OOP_Lab02\Circle.cs" />
     <Compile Include="CollectionType.cs" />
+    <Compile Include="OOP_Lab02\Cylinder.cs" />
+    <Compile Include="OOP_Lab02\NotPositiveValueException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
